WssCRM/ClientApp/src/app/nav-menu/nav-menu.component.scss
$tablet-width: 768px;

/* Keep the nav menu independent of scrolling and on top of other items */
.main-nav {
  & {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1;

    @media (min-width: $tablet-width) {
      height: 100%;
      width: calc(25% - 20px);
    }
  }
}

.navbar {
  & {
    @media (min-width: $tablet-width) {
      border-radius: 0px;
      border-width: 0px;
      height: 100%;
    }
  }

  &__list {
    & {
      @media (min-width: $tablet-width) {
        float: none;
      }
    }
  }

  &__list-item {
    & {
      float: none;
      margin: 6px;
      font-size: 15px;
    }

    &_active {
      & {}

      a {

        &,
        &:hover,
        &:focus {
          background-color: #4189C7;
          color: white;
        }
      }
    }
  }

  &__list-item-link {
    & {
      padding: 10px 16px;
      border-radius: 4px;

      width: 100%;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;

      @media (min-width: $tablet-width) {}
    }
  }

  &__icon {
    margin-right: 5px;
  }
}

.navbar-header {
  & {
    @media (min-width: $tablet-width) {
      float: none;
    }
  }
}

.navbar-collapse {
  & {
    @media (min-width: $tablet-width) {
      border-top: 1px solid #444;
      padding: 0px;
    }
  }
}

.navbar-nav {
  & {}

  &__icon {
    margin-right: 5px;
  }
}

